<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:gravity="center"
        android:text="@string/sensoresTile"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textSize="40sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:onClick="sensorsList"
        android:text="@string/lista" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:onClick="gyroscopeView"
        android:text="@string/Giroscopio" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:onClick="lightView"
        android:text="@string/Luz" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:onClick="accelerometer"
        android:text="@string/Acelerometro" />




</LinearLayout>