<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Spinner">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spinner_value_label" />

    <EditText
        android:id="@+id/edtSpinnerValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/xxxx" />

    <Button
        android:onClick="addValue"
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <TableLayout

        android:id="@+id/tblValues"
        style="@style/Widget.Design.TabLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:accessibilityPaneTitle="Spinner Table"
        android:orientation="horizontal"
        android:visibility="visible"
        tools:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/valor" />
        </TableRow>
    </TableLayout>
</LinearLayout>